compiler/testData/compileKotlinAgainstCustomBinaries/suspensionPointInMonitor/output.txt
compiler/testData/compileKotlinAgainstCustomBinaries/suspensionPointInMonitor/source.kt:8:13: error: a suspension point is inside a critical section
    builder {
            ^
compiler/testData/compileKotlinAgainstCustomBinaries/suspensionPointInMonitor/source.kt:14:13: error: a suspension point is inside a critical section
    builder {
            ^
COMPILATION_ERROR
